サイドバーのフロント実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -9,11 +9,37 @@
 .side-header {
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.user-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+.build-room {
+  font-size: 10px;
+}
+.build-room a{
+  color: deepskyblue;
+  padding: 14px;
+  border: solid 1px lightblue;
+  text-decoration: none;
+
 }
 .side-body {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+.chat-room {
+  padding: 20px 20px 40px 20px;
+}
+.chat-room a{
+  color: white;
+  text-decoration: none;
 }
 
 .chat {
