--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -3,14 +3,15 @@
         <%= link_to current_user.name, edit_user_path(current_user) %>
       </div>
       <div class="build-room">
-        <a href="#">チャットを作成する</a>
+        <%= link_to "チャットを作成する", new_room_path %>
       </div>
     </div>
     <div class="side-body">
-      <div class="chat-room">
-        <a href="#">練習室１</a>
-      </div>
-      <div class="chat-room">
-        <a href="#">練習室２</a>
-      </div>
+      <% current_user.rooms.each do |room| %>
+        <div class="room">
+          <div class="chat-room">
+            <a href="#"><%= room.name %></a>
+          </div>
+        </div>
+      <% end %>
     </div>
