--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,37 +12,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        DYPark
-      </div>
-      <div class="message-date">
-        2020/10/10/(Sat) 18:11:11
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        こんばんは
-      </div>
-    </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="message-user">
-        DYPark
-      </div>
-      <div class="message-date">
-        2020/10/10/(Sat) 18:14:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        ご飯食べましたか？
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
